--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
 # Node.js dependencies
 node_modules/
-package-lock.json
 
 # Logs
 logs/
@@ -16,6 +15,7 @@ yarn-error.log*
 __pycache__/
 *.py[cod]
 *.pyo
+*.py
 
 # IDE settings
 .vscode/
@@ -28,4 +28,5 @@ __pycache__/
 
 # Other
 lib/
-good/
+prj_docs/
+dist/
