--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,41 +38,8 @@ jobs:
             dist/3meta.min.js.map
             dist/3meta.esm.js
           body: |
-            ## 🎉 3meta ${{ github.ref_name }} - 全量国际化支持
-
-            本版本完成了核心引擎的重构，并实现了完整的多语言支持。
+            ## 3meta ${{ github.ref_name }}
             
-            ### ✨ 主要更新 (Feature)
-
-            - **🌍 全量国际化 (i18n)**：正式支持 **简体中文 (zh-CN)**、**繁體中文 (zh-TW)** 和 **英语 (en-US)**。
-            - **🛠 CLI 工具增强**：`qimen` 命令行工具新增 `--lang` 参数，支持直接输出不同语言的排盘 JSON 数据。
-            - **🏗 架构重构**：实现了逻辑与视图的分离。分析引擎（Analysis Engine）现在返回结构化的格式化数据，而非硬编码字符串，更方便第三方 UI 集成。
-            - **📚 文档升级**：同步更新了中英多语言版本的 README 及 CLI 使用文档。
-            
-            ### 📦 资源下载
-
-            - **浏览器/独立版**：`3meta-min-js.tar.gz`
-            - **UMD 格式**：`3meta.min.js`
-            - **ESM 模块**：`3meta.esm.js`
-            
-            ---
-            
-            ### 💡 快速尝试 CLI
-            
-            ```bash
-            # 使用英文输出排盘结果
-            node bin/qimen.js --date 2024-01-01T12:00:00 --lang en-US
-            ```
-
-            ### 📝 浏览器引入示例
-
-            ```html
-            <script src="3meta.min.js"></script>
-            <script>
-              const chart = ThreeMeta.QimenChart.byDatetime('2024-01-01 12:00:00');
-              console.log(chart);
-            </script>
-            ```
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
